--- a/package.json
+++ b/package.json
@@ -1,45 +1,18 @@
 {
   "name": "proto",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.3.2",
-    "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^6.0.1",
-    "react-scripts": "4.0.3",
-    "typescript": "~4.1.5"
-  },
+  "version": "1.0.0",
+  "repository": "git@github.com:zaini/proto.git",
+  "author": "zaini <alimzaini@outlook.com>",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev-backend": "cd backend && yarn dev",
+    "dev-frontend": "cd frontend && yarn start",
+    "dev": "yarn run dev-backend & yarn run dev-frontend",
+    "start-backend": "cd backend && yarn start",
+    "start-frontend": "cd frontend && yarn start",
+    "start": "yarn run start-backend & yarn run start-frontend",
+    "test-backend": "cd backend && yarn test",
+    "test-frontend": "cd frontend && yarn test",
+    "test": "yarn run test-backend && yarn run test-frontend"
   }
 }
