--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npx serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
