--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "apollo-server": "^3.5.0",
     "express": "^4.17.1",
+    "graphql": "^16.0.1",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
