--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@prisma/client": "^3.5.0",
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "prisma": "3.5.0"
   }
 }
