--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.5.0",
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
+    "argon2": "^0.28.3",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "typescript": "^4.4.4"
