--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.6"
   }
 }
