--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "argon2": "^0.28.3",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
     "nodemon": "^2.0.14",
     "prisma": "3.5.0"
   }
