--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,17 @@
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
     "argon2": "^0.28.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "2",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/node-fetch": "2",
     "nodemon": "^2.0.14",
     "prisma": "3.5.0"
   }
