--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "apollo-server": "^3.5.0",
     "argon2": "^0.28.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "form-data": "^4.0.0",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -29,9 +31,13 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express-session": "^1.17.4",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.10",
     "@types/node-fetch": "2",
+    "@types/passport": "^1.0.7",
+    "@types/passport-github2": "^1.2.5",
     "nodemon": "^2.0.14",
     "prisma": "3.5.0",
     "ts-node": "^10.4.0"
