--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^3.5.0",
     "@types/express": "^4.17.13",
@@ -21,12 +24,16 @@
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "2",
-    "typescript": "^4.4.4"
+    "passport": "^0.5.0",
+    "passport-github2": "^0.1.12",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^16.11.10",
     "@types/node-fetch": "2",
     "nodemon": "^2.0.14",
-    "prisma": "3.5.0"
+    "prisma": "3.5.0",
+    "ts-node": "^10.4.0"
   }
 }
