--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^3.5.0",
+    "@prisma/client": "^3.6.0",
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
     "argon2": "^0.28.3",
@@ -41,7 +41,7 @@
     "@types/passport-github2": "^1.2.5",
     "@types/winston": "^2.4.4",
     "nodemon": "^2.0.14",
-    "prisma": "3.5.0",
+    "prisma": "^3.6.0",
     "ts-node": "^10.4.0"
   }
 }
