--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.20.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "ts-node": "^10.4.0",
     "typescript": "~4.1.5"
   },
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jsonwebtoken": "^8.5.6"
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/react-table": "^7.7.8"
   }
 }
