--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
     "argon2": "^0.28.3",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
