--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
     "dev": "NODE_ENV=development nodemon -e ts --exec \"yarn run start\"",
     "start": "tsc && node dist/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-gql-types": "graphql-codegen"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.3.1",
+    "@graphql-codegen/typescript": "^2.4.2",
     "@prisma/client": "^3.6.0",
     "@types/express": "^4.17.13",
     "apollo-server": "^3.5.0",
