--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^16.11.10",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
     "@uiw/react-codemirror": "^4.3.3",
+    "apollo": "^2.33.9",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
