--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.5.5",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
+    "@codemirror/lang-javascript": "^0.19.6",
     "@codemirror/lang-python": "^0.19.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
