--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.5.5",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
+    "@codemirror/lang-javascript": "^0.19.6",
     "@codemirror/lang-python": "^0.19.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -17,12 +18,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^16.11.10",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
     "@uiw/react-codemirror": "^4.3.3",
+    "apollo": "^2.33.9",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
