--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.20.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-simple-star-rating": "^4.0.5",
     "react-table": "^7.7.0",
     "ts-node": "^10.4.0",
     "typescript": "~4.1.5"
