--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@uiw/react-codemirror": "^4.3.3",
     "apollo": "^2.33.9",
     "axios": "^0.24.0",
+    "chakra-ui-markdown-renderer": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "framer-motion": "^4",
@@ -36,6 +37,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
+    "react-markdown": "^8.0.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^4.0.5",
