--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^4.0.5",
     "react-table": "^7.7.0",
+    "react-typist": "^2.0.5",
     "ts-node": "^10.4.0",
     "typescript": "~4.1.5"
   },
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/react-table": "^7.7.8"
+    "@types/react-table": "^7.7.8",
+    "@types/react-typist": "^2.0.3"
   }
 }
