--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
     "@uiw/react-codemirror": "^4.3.3",
+    "@uiw/react-heat-map": "^2.0.3",
+    "@uiw/react-tooltip": "^4.14.0",
     "apollo": "^2.33.9",
     "axios": "^0.24.0",
     "chakra-ui-markdown-renderer": "^4.0.0",
