--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,16 @@
     "@apollo/client": "^3.5.5",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
-    "@codemirror/lang-javascript": "^0.19.6",
-    "@codemirror/lang-python": "^0.19.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/roboto-mono": "^4.5.0",
+    "@monaco-editor/react": "^4.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
-    "@uiw/react-codemirror": "^4.3.3",
     "@uiw/react-heat-map": "^2.0.3",
     "@uiw/react-tooltip": "^4.14.0",
     "axios": "^0.24.0",
