--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-simple-star-rating": "^4.0.5",
     "react-table": "^7.7.0",
     "react-typist": "^2.0.5",
+    "recharts": "^2.1.9",
     "typescript": "~4.1.5"
   },
   "scripts": {
