--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,18 @@
   "author": "zaini",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon -e ts --exec \"yarn run start\"",
+    "dev": "dotenv -e .env.development -- nodemon -e ts --exec \"yarn run start\"",
     "build": "tsc",
     "start": "tsc && node dist/server.js",
     "test:start": "dotenv -e .env.test -- nodemon -e ts --exec \"yarn run start\"",
     "db:migrate": "dotenv -e .env.development -- npx prisma migrate dev && npx prisma generate --skip-seed",
     "db:reset": "dotenv -e .env.development -- npx prisma migrate reset --force --skip-seed",
     "db:setup": "yarn run db:reset && yarn run db:migrate",
-    "test:db:migrate": "dotenv -e .env.test -- npx prisma migrate dev --skip-seed",
+    "test:db:seed": "dotenv -e .env.test -- npx prisma migrate reset --force",
+    "test:db:migrate": "dotenv -e .env.test -- npx prisma migrate dev",
     "test:db:reset": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed",
     "test:db:setup": "yarn run test:db:reset && yarn run test:db:migrate",
-    "test": "yarn run test:db:setup && dotenv -e .env.test jest -i",
+    "test": "dotenv -e .env.test jest --verbose --runInBand -i",
     "generate-gql-types": "graphql-codegen"
   },
   "prisma": {
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@codejedi365/jest-serial-runner": "^2.0.0",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
@@ -52,9 +54,11 @@
     "babel-jest": "^27.5.1",
     "dotenv-cli": "^5.0.0",
     "jest": "^27.5.1",
+    "jest-runner": "^27.5.1",
     "nodemon": "^2.0.14",
     "prisma": "^3.6.0",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
