Update test configurations

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start": "tsc && node dist/server.js",
     "test:start": "dotenv -e .env.test -- nodemon -e ts --exec \"yarn run start\"",
-    "db:migrate": "dotenv -e .env.development -- npx prisma migrate dev && npx prisma generate --skip-seed",
+    "db:migrate": "dotenv -e .env.development -- npx prisma migrate dev && npx prisma generate",
+    "db:seed": "dotenv -e .env.development -- npx prisma migrate reset --force",
     "db:reset": "dotenv -e .env.development -- npx prisma migrate reset --force --skip-seed",
     "db:setup": "yarn run db:reset && yarn run db:migrate",
     "test:db:seed": "dotenv -e .env.test -- npx prisma migrate reset --force",
