--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,19 @@
   "license": "MIT",
   "scripts": {
     "dev": "dotenv -e .env.development -- nodemon -e ts --exec \"yarn run start\"",
-    "build": "tsc",
-    "start": "tsc && node dist/server.js",
-    "test:start": "dotenv -e .env.test -- nodemon -e ts --exec \"yarn run start\"",
+    "test:dev": "dotenv -e .env.test -- nodemon -e ts --exec \"yarn run start\"",
+    "start": "dotenv -e .env.development -- tsc && node dist/server.js",
+    "test:start": "dotenv -e .env.test -- tsc && node dist/server.js",
     "db:migrate": "dotenv -e .env.development -- npx prisma migrate dev && npx prisma generate",
-    "db:seed": "dotenv -e .env.development -- npx prisma migrate reset --force",
-    "db:reset": "dotenv -e .env.development -- npx prisma migrate reset --force --skip-seed",
-    "db:setup": "yarn run db:reset && yarn run db:migrate",
-    "test:db:seed": "dotenv -e .env.test -- npx prisma migrate reset --force",
     "test:db:migrate": "dotenv -e .env.test -- npx prisma migrate dev",
+    "db:seed": "dotenv -e .env.development -- npx prisma migrate reset --force",
+    "test:db:seed": "dotenv -e .env.test -- npx prisma migrate reset --force",
+    "db:reset": "dotenv -e .env.development -- npx prisma migrate reset --force --skip-seed",
     "test:db:reset": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed",
+    "db:setup": "yarn run db:reset && yarn run db:migrate",
     "test:db:setup": "yarn run test:db:reset && yarn run test:db:migrate",
     "test": "dotenv -e .env.test jest --verbose --runInBand -i",
+    "build": "tsc",
     "generate-gql-types": "graphql-codegen"
   },
   "prisma": {
