--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,41 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  deploy:
-    # The type of runner that the job will run on
+  test:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps TCP port 5432 on service container to the host
+          - 5432:5432
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/proto
+      JWT_TOKEN_SECRET: ${{ secrets.JWT_TOKEN_SECRET }}
+      CLIENT_ID_GITHUB: ${{ secrets.CLIENT_ID_GITHUB }}
+      CLIENT_SECRET_GITHUB: ${{ secrets.CLIENT_SECRET_GITHUB }}
+      REDIRECT_URI_GITHUB: ${{ secrets.REDIRECT_URI_GITHUB }}
+      FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
+      SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+      JUDGE_API_URL: ${{ secrets.JUDGE_API_URL }}
+      NODE_ENV: ${{ secrets.NODE_ENV }}
     steps:
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-
-      - name: SSH Remote Commands
-        uses: appleboy/ssh-action@v0.1.4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          script: |
-            cd proto
-            git checkout ${{ steps.extract_branch.outputs.branch }}
-            git pull
-            yarn run build
-            yarn run start
+          node-version: "16.13"
+      - run: yarn run install
+      - run: yarn run setup
+      - run: cd backend && (yarn run test:dev & yarn run test)
