--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "db:setup": "yarn run db:reset && yarn run db:migrate",
     "test:db:setup": "yarn run test:db:reset && yarn run test:db:migrate",
     "test": "dotenv -e .env.test jest --verbose --runInBand -i",
+    "test:studio": "dotenv -e .env.test -- npx prisma studio",
+    "studio": "dotenv -e .env.development -- npx prisma studio",
     "build": "tsc",
     "judge": "cd judge0-v1.13.0 ; sh start.sh",
     "generate-gql-types": "graphql-codegen"
