--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/react-csv": "^1.1.2",
     "@types/react-table": "^7.7.8",
     "@types/react-typist": "^2.0.3"
   }
