--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@babel/runtime": "^7.17.8",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/roboto-mono": "^4.5.0",
     "@monaco-editor/react": "^4.3.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
@@ -22,6 +22,7 @@
     "chakra-react-select": "^3.1.1",
     "chakra-ui-markdown-renderer": "^4.0.0",
     "dotenv": "^10.0.0",
+    "enzyme": "^3.11.0",
     "framer-motion": "^4",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
@@ -37,7 +38,8 @@
     "react-table": "^7.7.0",
     "react-typist": "^2.0.5",
     "recharts": "^2.1.9",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "waait": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,9 +65,12 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.11",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/react-csv": "^1.1.2",
     "@types/react-table": "^7.7.8",
-    "@types/react-typist": "^2.0.3"
+    "@types/react-typist": "^2.0.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6"
   }
 }
