--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "react-table": "^7.7.0",
     "react-typist": "^2.0.5",
     "recharts": "^2.1.9",
-    "typescript": "~4.1.5",
+    "typescript": "^4.6.3",
     "waait": "^1.0.5"
   },
   "scripts": {
@@ -66,7 +66,6 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.11",
-    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/react-csv": "^1.1.2",
     "@types/react-table": "^7.7.8",
